--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
         "mysql2": "^3.11.3",
-        "pg": "^8.13.0",
+        "pg": "^8.13.1",
         "prettier": "^3.3.3",
+        "sequelize": "^6.37.5",
+        "sequelize-typescript": "^2.1.6",
+        "socket.io": "^4.8.1",
         "swagger-autogen": "^2.23.7",
         "swagger-ui-express": "^5.0.1",
         "twilio": "^5.3.5",
@@ -54,6 +57,7 @@
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.7.5",
+        "@types/socket.io": "^3.0.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "nodemon": "^3.1.7",
