--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc --build && cp -R src/api/docs dist/api",
+        "build": "tsc --build",
         "start": "node ./dist/server.js",
         "dev": " nodemon ./src/server.ts",
         "prisma:migrate": "prisma migrate dev --skip-seed",
@@ -30,6 +30,7 @@
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.12",
         "@types/twilio": "^3.19.2",
+        "@vercel/node": "^5.0.0",
         "aws-sdk": "^2.1691.0",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
