--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node_tradeup",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc --build",
