--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "src/api/docs/swagger-output.json"],
     "exclude": ["node_modules"]
 }
