--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.7.5",
+        "@types/nodemailer": "^6.4.17",
         "@types/socket.io": "^3.0.1",
         "@types/winston": "^2.4.4",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
+        "nodemailer": "^6.10.0",
         "nodemon": "^3.1.7",
         "prisma": "^5.20.0",
         "ts-node": "^10.9.2",
