--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "swagger-ui-express": "^5.0.1",
         "twilio": "^5.3.5",
         "winston": "^3.17.0",
+        "nodemailer": "^6.10.0",
         "winston-daily-rotate-file": "^5.0.0"
     },
     "devDependencies": {
